primer commit de signup y link a iconos de bootstrap añadido

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore / Twitter</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="icon" type="image/x-icon" href="/src/img/fav-twitter.png">
+
 </head>
+
 <body>
     <div class="d-flex justify-content-center">
         <div class="nav">
@@ -15,11 +23,46 @@
         <div class="main">
 
         </div>
+        
+        <!-- columna sing-up -->
+        <div class="w-25 p-3">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title"> New to Twitter?</h3>
+                    <p class="card-text fw-light">
+                        Sign up now to get your own personalized timeline!
+                    </p>
+                    <div class="list-group gap-3">
+                        <a href="#"
+                            class="list-group-item list-group-item-action rounded-pill d-flex justify-content-center gap-2"><i
+                                class="bi bi-google"></i>Sign up with Google</a>
+                        <a href="#"
+                            class="list-group-item list-group-item-action rounded-pill d-flex justify-content-center gap-2"><i
+                                class="bi bi-apple"></i>Sign up with Apple</a>
+                        <a href="#"
+                            class="list-group-item list-group-item-action rounded-pill d-flex justify-content-center">Create
+                            account</a>
+                        </dib>
+                        <p class="fw-light">
+                            By signing up, you agree to the <a href="">Terms of Service</a> and <a href="">Privacy
+                                Policy</a> , including <a href="">Cookie Use</a>.
+                        </p>
+                    </div>
+                </div>
 
-        <div class="signup">
+            </div>
 
-        </div>
+            <div class="d-flex flex-wrap gap-2">
+                <a href="#" class="text-decoration-none fw-semibold">Terms of Service</a>
+                <a href="#" class="text-decoration-none fw-semibold">Privacy Policy</a>
+                <a href="#" class="text-decoration-none fw-semibold">Cookie Policy</a>
+                <a href="#" class="text-decoration-none fw-semibold">Accessibility</a>
+                <a href="#" class="text-decoration-none fw-semibold">Ads info</a>
+                <a href="#" class="text-decoration-none fw-semibold">More...</a>
+            </div>
 
-    </div>
+            <span>© 2023 Twitter, Inc</span>
+
 </body>
+
 </html>
