--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="/src/img/fav-twitter.png">
+    <link rel="stylesheet" href="./src/css/style.css">
 
 
 </head>
 
 
 <body>
-    <div class="d-flex ">
+    <div class="d-flex justify-content-center pt-3">
         <div class="nav d-flex flex-column">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter"
                 viewBox="0 0 16 16">
