iconos de interaccion reacomodados

--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
                         <textarea class="form-control bg-white text-secondary border-secondary"
                             id="exampleFormControlTextarea1" rows="3" placeholder="¿Que esta pasando?"></textarea>
                         <div class="row mt-2">
-                            <div class="col-8"><i class="bi bi-card-image"></i><i class="bi bi-list-ul"></i><i
-                                    class="bi bi-emoji-smile"></i><i class="bi bi-geo-alt-fill"></i>
+                            <div class="col-8 d-flex gap-2">
+                                <i class="bi bi-card-image"></i>
+                                <i class="bi bi-list-ul"></i>
+                                <i class="bi bi-emoji-smile"></i>
+                                <i class="bi bi-geo-alt-fill"></i>
                             </div>
 
                             <div class="col-4">
@@ -82,9 +85,10 @@
                                     accusamus? Sapiente dolorem cupiditate ratione voluptas voluptatem consequatur eum
                                     enim perspiciatis!
                             </div>
-                            <div class="col-12">
-                                <i class="bi bi-chat"></i>139 <i class="bi bi-heart"></i> 2300 <i
-                                    class="bi bi-bar-chart"></i>35045
+                            <div class="col-12 d-flex gap-3">
+                                <i class="bi bi-chat">139</i>
+                                <i class="bi bi-heart">2300</i>
+                                <i class="bi bi-bar-chart">35045</i>
                             </div>
 
                         </div>
@@ -104,9 +108,10 @@
                                     accusamus? Sapiente dolorem cupiditate ratione voluptas voluptatem consequatur eum
                                     enim perspiciatis!
                             </div>
-                            <div class="col-12">
-                                <i class="bi bi-chat"></i>199 <i class="bi bi-heart"></i> 2654 <i
-                                    class="bi bi-bar-chart"></i>36035
+                            <div class="col-12 d-flex gap-3">
+                                <i class="bi bi-chat">199</i>
+                                <i class="bi bi-heart">2654</i>  
+                                <i class="bi bi-bar-chart">36035</i>
                             </div>
 
                         </div>
