--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <img src="./src/img/profile-twitter.jpg" class="rounded-circle" id="profile-img">
                     </div>
                     <div class="col-10">
-                        <p class="text-dark">Elon Musk <span class="text-secondary">@ElonMusk - 12min</span></p>
+                        <p class="text-dark">Elon Musk <img class="verified" src="./src/img/verified.png"><span class="text-secondary">@ElonMusk - 12min</span></p>
 
                         <div class="row mt-2">
                             <div class="col-12">
@@ -99,7 +99,7 @@
                         <img src="./src/img/profile-twitter2.jpg" class="rounded-circle" id="profile-img">
                     </div>
                     <div class="col-10">
-                        <p class="text-dark">Bill Gates <span class="text-secondary">@BillGates - 30min</span></p>
+                        <p class="text-dark">Bill Gates <img class="verified" src="./src/img/verified.png"><span class="text-secondary">@BillGates - 30min</span></p>
 
                         <div class="row mt-2">
                             <div class="col-12">
